# SilentDune-Client

./: .gitignore  AUTHORS.rst  LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
init/: systemd.service
install/: sd-certupdate.py  sd-client-install.py
silentdune_client/: client_install.py  configuration.py  daemon.py  ipv4_rules.txt  json_models.py  sdc.conf  sdc_firewall.py  sdc_install.py  sdc_service.py  server.py  service.py  skeleton.py  utilities.py
silentdune_client/builders/: __init__.py  iptables.py
silentdune_client/init/: sdc-firewall.init.in  sdc-firewall.service.in  systemd.service  sysv.service
silentdune_client/install/: __init__.py  sd-client-install.py
silentdune_client/models/: global_preferences.py  iptables_rules.py  json_base.py  node.py
silentdune_client/modules/: __init__.py
silentdune_client/modules/comm/sd_server/: __init__.py  auto_rules.py  connection.py  connection_rules.py
silentdune_client/modules/firewall/manager/: __init__.py
silentdune_client/modules/tests/job/: __init__.py
silentdune_client/utils/: configuration.py  console.py  daemon.py  exceptions.py  iptables_builder.py  log.py  misc.py  module_loading.py  node_info.py
tests/: conftest.py  node_info_test.py  test_skeleton.py
